--- a/vectorsDetails.html
+++ b/vectorsDetails.html
@@ -6,6 +6,67 @@
     <title>Bsod's Creations</title>
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" defer></script>   
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: url('background.jpg') no-repeat center center/cover;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 30px;
+            background: rgba(0, 0, 0, 0.7);
+            position: absolute;
+            width: 100%;
+        }
+
+        .nav-link {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100vh;
+            padding-left: 50px;
+            color: white;
+        }
+
+        .title {
+            font-size: 48px;
+            font-weight: bold;
+        }
+
+        .description {
+            font-size: 20px;
+            margin-top: 10px;
+            max-width: 400px;
+        }
+
+        .cta-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            font-size: 18px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .cta-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar">
@@ -14,5 +75,11 @@
         <div class="user-icon"></div>
         <a href="#" class="nav-link" id="login-button">Login</a>
     </nav>
+    
+    <div class="content">
+        <div class="title">Welcome to Bsod's Creations</div>
+        <div class="description">Discover unique projects and creative works. Explore and enjoy!</div>
+        <button class="cta-button">Get Started</button>
+    </div>
 </body>
 </html>
