--- a/vectorsDetails.html
+++ b/vectorsDetails.html
@@ -10,26 +10,10 @@
         body {
             margin: 0;
             padding: 0;
-            background: url('background.jpg') no-repeat center center/cover;
+            background: url('example_icons.jpg') no-repeat center center/cover;
             height: 100vh;
             display: flex;
             flex-direction: column;
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 30px;
-            background: rgba(0, 0, 0, 0.7);
-            position: absolute;
-            width: 100%;
-        }
-
-        .nav-link {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
         }
 
         .content {
@@ -50,21 +34,6 @@
             font-size: 20px;
             margin-top: 10px;
             max-width: 400px;
-        }
-
-        .cta-button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            font-size: 18px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        .cta-button:hover {
-            background-color: #0056b3;
         }
     </style>
 </head>
