--- a/vectorsDetails.html
+++ b/vectorsDetails.html
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: url('example_icons.jpg') no-repeat center center/cover;
+            background: url('example_icons.png') no-repeat center center/cover;
             height: 100vh;
             display: flex;
             flex-direction: column;
