--- a/main.html
+++ b/main.html
@@ -16,14 +16,14 @@
     </nav> 
 
     <div class="frame" id="frame">
-        <h1>Vectors</h1>
-        <p>Explore my pack of vector icons!</p>
+        <h1 class="white-text">Vectors</h1>
+        <p class="white-text">Explore my pack of vector icons!</p>
         <button onclick="exploreMore()" href="vectorsDetails.html">See Details</button>
     </div>
 
     <div class="frame1" id="frame1">
-        <h1>Scripting</h1>
-        <p>See Scripting things i guess</p>
+        <h1 class="white-text">Scripting</h1>
+        <p class="white-text">See Scripting things i guess</p>
         <button onclick="exploreMore()" href="vectorsDetails.html">See Details</button>
     </div>
 </body>
